--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,10 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.20"
+axum-macros = "0.3.8"
+chrono = "0.4.31"
+dotenvy = "0.15.7"
+sea-orm = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid", "with-json"] }
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
