--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,14 @@ axum = "0.6.20"
 axum-macros = "0.3.8"
 chrono = "0.4.31"
 dotenvy = "0.15.7"
+futures-util = "0.3.28"
 sea-orm = { version = "0.12.3", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid", "with-json"] }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
+tower = "0.4.13"
+hyper = "0.14.27"
+bytes = "1.5.0"
+futures = "0.3.28"
+async-trait = "0.1.73"
+http = "0.2.9"
